# parallel-implimentation-of-Laplacian-Edge-Detectors-for-color-large-images-using-CUDA.-

./: CMakeLists.txt  README.md  kernel.cu  kernel.h  main.cpp
