CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(EdgeDetectionCuda)
FIND_PACKAGE(CUDA REQUIRED)

INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
LINK_DIRECTORIES(${CUDA_LIBRARIES})


set(BUILD_TYPE Release)
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -gencode arch=compute_30,code=sm_30)

 
CUDA_ADD_EXECUTABLE(EdgeDetectionCuda main.cpp  kernel.h  kernel.cu)

TARGET_LINK_LIBRARIES(EdgeDetectionCuda ${CUDA_LIBRARIES})



